<resources>
    <string name="app_name">GrocerySavingsFinder</string>
    <string name="item_name">Name of Item</string>
    <string name="item_deal">Deal on Item</string>
    <string name="item_deal_label">Deal:</string>
    <string name="deal_expire">Date of Expiration</string>
    <string name="deal_expire_label">Expires: </string>
    <string name="deal_store">Store Available At</string>
    <string name="deal_store_label">Available at: </string>
    <string name="notes_section">Special Notes</string>
    <string name="notes_section_label">Special Notes:</string>
    <string name="barcode_launch">Scan Barcode</string>
    <string name="change_zip">Set Zipcode</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="show_favorites">Favorites</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

</resources>
